--- a/kubernetes/bankapp-depolyment.yml
+++ b/kubernetes/bankapp-depolyment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: bankapp
-        image:
+        image: 2604manishyadav/bankapp-eks:v1
         resources:
           limits:
             memory: "128Mi"
