updated code PV

--- a/kubernetes/persistent-volume.yaml
+++ b/kubernetes/persistent-volume.yaml
@@ -3,14 +3,15 @@ kind: PersistentVolume
 metadata:
   name: mysql-pv
   namespace: bankapp-namespace
+  labels:
+    app: mysql
 spec:
   capacity:
-    storage: 10Gi
-  volumeMode: Filesystem
+    storage: 5Gi
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain  # Keeps the PV after the PVC is deleted
-  storageClassName: standard  # Make sure this matches your cluster's default storage class
+  storageClassName: manual 
   hostPath:
-    path: /mnt/data/mysql
-    type: DirectoryOrCreate
+    path: /tmp/bankapp-mysql
+    
