--- a/kubernetes/secrets.yaml
+++ b/kubernetes/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysql-secret
+  name: bankapp-secret
   namespace: bankapp-namespace
 type: Opaque
 data:
