--- a/kubernetes/mysql-service.yaml
+++ b/kubernetes/mysql-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql-svc
+  name: mysql-headless-service
   namespace: bankapp-namespace
   labels:
     app: mysql
