--- a/kubernetes/bankapp-depolyment.yml
+++ b/kubernetes/bankapp-depolyment.yml
@@ -23,8 +23,11 @@ spec:
         - name: bankapp-container
           image: 2604manishyadav/bankapp-eks:v1
           resources:
+            requests:
+              memory: "512Mi"
+              cpu: "250m"
             limits:
-              memory: "128Mi"
+              memory: "1Gi"
               cpu: "500m"
           ports:
             - containerPort: 8080
